# course-stepik-dl-advanced

./: .gitignore  README.md  test_python3.py  try_python3.py
.devcontainer/: devcontainer.json
hw08/: bak.Kaggle_.ipynb  bak.hw_kaggle.ipynb  bak.hw_kaggle_.ipynb  hw_kaggle.ipynb
hw08/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
hw08/submissions/: my_submission_CatBoostClassifier_20230317_162549.csv  my_submission_CatBoostClassifier_20230317_170918.csv  my_submission_CatBoostClassifier_20230317_171300.csv  my_submission_CatBoostClassifier_20230317_171441.csv  my_submission_CatBoostClassifier_20230317_171515.csv  my_submission_CatBoostClassifier_20230317_171954.csv  my_submission_CatBoostClassifier_20230317_172457.csv  my_submission_CatBoostClassifier_20230317_172513.csv  my_submission_CatBoostClassifier_20230317_172524.csv  my_submission_CatBoostClassifier_20230317_172838.csv  my_submission_CatBoostClassifier_20230317_172919.csv  (+13 more)
hw11/: [homework]dense_and_convolutional_nn.html  [homework]dense_and_convolutional_nn.ipynb
hw14/: efficientnet-b2.ipynb  simpsons.bak.ipynb  simpsons.html  simpsons.ipynb  submission.csv  submission_test.csv
hw16/: semantic_segmentation.html  semantic_segmentation.ipynb
hw19/: [hw]autoencoders.ipynb
hw21/: GANs.ipynb  downsample_images.py
project-objdet/: .gitignore  README.md  hw_objectdetection.ipynb  myutils.py  pyproject.toml
project-objdet/src/: wider_dataset.py
project-objdet/src/odection/: __init__.py  dataset_coco.py  dataset_wider.py  loss.py  model_evaluate.py  ssd.py  transform.py  utils.py
(+3 files in other folders)
