[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "odection"
authors = [{ name = "Albert M", email = "rinkorn.alb@gmail.com" }]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "torch",
    "lightning",
    "click",
    "pycocotools",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "flit",
    "wheel",
    "poetry",
    "ipykernel",
    "ipywidgets",
    "black",
    "ruff",
    "mypy",
]
test = ["pytest", "pytest-cov", "mock"]
doc = ["sphinx"]

# [project.scripts]
# odection-demo = "odection.main:main"

[project.urls]
Documentation = "https://gitlab.com/dlspace/odection/docs"
Source = "https://gitlab.com/odection/odtorch"

[tool.flit.module]
name = "odection"

[tool.flit.sdist]
include = ["docs/"]
exclude = ["docs/*.html"]

[tool.ruff]
line-length = 88 # defaults to 88 like black
target-version = "py310" # the python version to target, useful when considering code upgrades, defaults to "py310"
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
]
ignore = ["F401", "F841"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["src"]
